resolved overflow on the right for whole page

--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -76,6 +76,7 @@
         }
 
         .headContainerWrapper {
+          overflow: hidden;
           position: relative;
           display: flex;
           gap: 1em;
